--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ form {
 .autocomplete {
     position: relative;
     display: inline-block;
-    width: 20%;
+    width: 320px;
 }
 
 .enter-city {
@@ -26,6 +26,11 @@ form {
 	display: none;
 }
 
+.dropdown-list.top {
+  top: inherit;
+  bottom: 0;
+}
+
 .dropdown-list {
   display: block;
   position: absolute;
@@ -34,7 +39,6 @@ form {
   background-color: white;
   padding: 0;
   z-index: 20;
-  max-height: 15vw;
   overflow-y: auto;
   overflow-x: hidden;
   box-sizing: border-box;
