--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ body {
 }
 
 .dropdown-list.top {
-  top: inherit;
+  top: auto;
   bottom: 100%;
 }
 
@@ -92,6 +92,9 @@ body {
   text-align: left;
   width: 100%;
   display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .dropdown-item:hover {
